plugins {
    id 'java'
    id 'war'
}

group 'org.scoula'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
    springVersion = '5.3.37'
    lombokVersion = '1.18.30'
    springSecurityVersion = '5.8.13'
}

sourceCompatibility = '1.17'
targetCompatibility = '1.17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}


dependencies {
    implementation 'com.squareup.okhttp3:okhttp:4.11.0'  // KIS API 호출용
    implementation 'org.springframework:spring-context-support:5.3.37'  // 스케줄링용

    // 스프링
    implementation("org.springframework:spring-context:${springVersion}")
            { exclude group: 'commons-logging', module: 'commons-logging' }
    implementation "org.springframework:spring-webmvc:${springVersion}"
    implementation 'javax.inject:javax.inject:1'


    // 보안
    implementation("org.springframework.security:spring-security-web:${springSecurityVersion}")
    implementation("org.springframework.security:spring-security-config:${springSecurityVersion}")
    implementation("org.springframework.security:spring-security-core:${springSecurityVersion}")
    implementation("org.springframework.security:spring-security-taglibs:${springSecurityVersion}")


    // swagger
    implementation 'io.springfox:springfox-swagger2:2.9.2'
    implementation 'io.springfox:springfox-swagger-ui:2.9.2'

    //jwt
    implementation("io.jsonwebtoken:jjwt-api:0.11.5")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
    implementation("io.jsonwebtoken:jjwt-jackson:0.11.5")


    // AOP
    implementation 'org.aspectj:aspectjrt:1.9.20'
    implementation 'org.aspectj:aspectjweaver:1.9.20'

    // JSP, SERVLET, JSTL
    implementation('javax.servlet:javax.servlet-api:4.0.1')
    compileOnly 'javax.servlet.jsp:jsp-api:2.1'
    implementation 'javax.servlet:jstl:1.2'

    // Logging
//    implementation 'org.slf4j:slf4j-api:2.0.9'
//    runtimeOnly 'org.slf4j:jcl-over-slf4j:2.0.9'
//    runtimeOnly 'org.slf4j:slf4j-log4j12:2.0.9'
//    implementation 'log4j:log4j:1.2.17'

    // Log4j2
    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
//    implementation 'org.slf4j:slf4j-api:2.0.13'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.18.0'


    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16'
    implementation 'org.apache.logging.log4j:log4j-api:2.0.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.0.1'


    // xml내 한글 처리
    implementation 'xerces:xercesImpl:2.12.2'

    // Lombok
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // Jackson - Json 처리
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'


    // 데이터베이스
    implementation 'com.mysql:mysql-connector-j:8.1.0'
    implementation 'com.zaxxer:HikariCP:2.7.4'

    implementation "org.springframework:spring-tx:${springVersion}"
    implementation "org.springframework:spring-jdbc:${springVersion}"

    implementation 'org.mybatis:mybatis:3.4.6'
    implementation 'org.mybatis:mybatis-spring:1.3.2'

    implementation 'org.mybatis:mybatis-typehandlers-jsr310:1.0.2'

    // 한국투자증권 API 관련
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'

    // 웹소켓
    implementation 'javax.websocket:javax.websocket-api:1.1'
    implementation 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.17'
    implementation 'org.java-websocket:Java-WebSocket:1.5.3'
    implementation 'org.apache.tomcat:tomcat-websocket:9.0.75' // 톰캣 내부 WebSocket 지원

    // jakarta
    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'

    // 테스트
    testImplementation "org.springframework:spring-test:${springVersion}"
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")


    implementation 'org.springframework:spring-context-support:5.3.37'
    implementation 'com.sun.mail:javax.mail:1.6.2'

    // Lettuce 클라이언트 (기본 클라이언트로 추천)
    implementation 'io.lettuce:lettuce-core:6.1.8.RELEASE'


    implementation 'javax.annotation:javax.annotation-api:1.3.2'
}


war {
    webAppDirName = 'src/main/webapp'
}



test {
    useJUnitPlatform()
}